warnings p2